--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,7 @@
   ],
   "require": {
     "php": ">=7.1.0",
-    "ext-swoole": ">=4.2.13",
-    "easyswoole/component": "^1.5",
-    "easyswoole/spl": "^1.1",
-    "easyswoole/socket": "^1.1"
+    "ext-swoole": ">=4.4.0"
   },
   "require-dev": {
     "easyswoole/swoole-ide-helper": "^1.2"
